Closed Bug 1558628 Opened 5 years ago Closed 5 years ago

Fix "tracking content blocked" in webcompat reports, and maybe report something better

Categories

(Web Compatibility :: Tooling & Investigations, defect, P1)

defect

Tracking

(firefox67 disabled, firefox68 fixed, firefox69 fixed)

RESOLVED FIXED
Tracking Status
firefox67 --- disabled
firefox68 --- fixed
firefox69 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

(Regression)

Details

Attachments

(1 file)

Bug 1517136 seems to have broken the "tracking content blocked" field we have in webcompat.com reports we have which comes from:

https://searchfox.org/mozilla-central/rev/c606cdd6d014fee4034da1702d484c0d41b604c9/browser/extensions/report-site-issue/background.js#130

Luke was telling me we may want to report something better here, but I think the very first step is to fix the regression caused there and then figure out what it is that we'd like to report instead.

Mike, can you help me figure out the priority of this bug please and which release branches the fix needs to be backported to?

Flags: needinfo?(miket)
No longer blocks: 1517136
Regressed by: 1517136
Blocks: 1557373

It looks like Bug 1517136 regressed the behavior in 66. The good news is we only ship Report Site Issue enabled in pre-release, so if we can uplift to Beta that would be great.

Flags: needinfo?(miket)
Priority: -- → P1

(In reply to Mike Taylor [:miketaylr] from comment #3)

It looks like Bug 1517136 regressed the behavior in 66. The good news is we only ship Report Site Issue enabled in pre-release, so if we can uplift to Beta that would be great.

Oh great, will do. Hopefully the added tests will prevent this from happening the next time!

Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0d6cd9da22a2 Add back nsIDocShell.hasTrackingContentBlocked since it is used in the webcompat report-site-issue extension; r=baku

Comment on attachment 9071423 [details]
Bug 1558628 - Add back nsIDocShell.hasTrackingContentBlocked since it is used in the webcompat report-site-issue extension;

Beta/Release Uplift Approval Request

  • User impact if declined: Users who submit broken site reports will be submitting misleading information about whether there were any tracking content blocked on those sites.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This patch partly restores code that was previously there, adding one virtual function which will just be called by the report-site-issue extension and is otherwise unused in Firefox.
  • String changes made/needed: none
Attachment #9071423 - Flags: approval-mozilla-beta?
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED

Comment on attachment 9071423 [details]
Bug 1558628 - Add back nsIDocShell.hasTrackingContentBlocked since it is used in the webcompat report-site-issue extension;

regression fix for webcompat extension, approved for 68.0b10

Attachment #9071423 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Assignee: nobody → ehsan

Thanks all.

Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: