Bug 1558628 - Add back nsIDocShell.hasTrackingContentBlocked since it is used in the webcompat report-site-issue extension; r=baku

Differential Revision: https://phabricator.services.mozilla.com/D34613